--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     </head>
     <body>
         <h1>イギリスのサッカーチーム　liverpoolfc</h1>
+        <style>
+        h{color:red;
+           background:black;
+           }
+           </style>
         <p>ぼくはLiverpool FCを応援しています</p>
         <a href="https://www.liverpoolfc.com/welcome-to-liverpool-fc">これが公式サイトです</a>
     </body>
