--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <body>
         <h1>イギリスのサッカーチーム　liverpoolfc</h1>
         <style>
-        h{color:red;
-           background:black;
+        p{color:white;
+           background:red;
            }
            </style>
         <p>ぼくはLiverpool FCを応援しています</p>
